examples/test/testpolicy10639.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10639
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key26: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value13
      podSelector:
        matchLabels:
          key24: value37
          key38: value19
          key20: value31
